--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,3 @@
-@import 'contact.scss';
-@import 'popup.scss';
+@import 'contactTablecomponent.scss';
+@import 'popupCommon.scss';
 @import 'buttonCommon.scss';
