feat: add componentn register

--- a/src/styles/buttonCommon.scss
+++ b/src/styles/buttonCommon.scss
@@ -1,4 +1,9 @@
 .buttonCommon {
+  text-align: center;
+  cursor: pointer;
+  p {
+    margin: 0 auto;
+  }
   &__loading {
     display: grid;
     place-content: center;
