--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,4 @@
-@import 'contactTablecomponent.scss';
+@import 'homePage.scss';
 @import 'popupCommon.scss';
 @import 'buttonCommon.scss';
+@import 'contactTablecomponent.scss';
