--- a/src/styles/contactTablecomponent.scss
+++ b/src/styles/contactTablecomponent.scss
@@ -7,9 +7,11 @@ th,
 td {
   border: 1px solid #ccc;
   padding: 8px;
-  text-align: left;
+  text-align: center;
   button {
     margin: auto 5px;
+    width: 100px;
+    height: 24px;
   }
 }
 
