ci: configure architecture

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,4 @@
-@import 'homePage.scss';
-@import 'popupCommon.scss';
-@import 'buttonCommon.scss';
-@import 'contactTablecomponent.scss';
+@import 'global/index.scss';
+@import 'common/index.scss';
+@import 'page/index.scss';
+@import 'contact/index.scss';
